# libplinkio

./: .gitignore  .pylintrc  CMakeLists.txt  COPYING  MANIFEST.in  Makefile.am  Makefile.in  README  README.md  README.rst  aclocal.m4  annotated.html  bed_8h.html  bed_8h_source.html  bed__header_8h.html  bed__header_8h_source.html  bim_8h.html  bim_8h_source.html  bim__parse_8h.html  bim__parse_8h_source.html  classes.html  configure  configure.ac  fam_8h.html  fam_8h_source.html  fam__parse_8h.html  fam__parse_8h_source.html  file_8h.html  file_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  group__Libplinkio.html  (+30 more)
.github/workflows/: build_dist.yml  cmake.yml  pypi.yml  pypi_experimental.yml  pypi_source.yml  tox.yml
docs/: Doxyfile  mainpage.dox
libs/: CMakeLists.txt
libs/cmockery/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libtool
libs/cmockery/src/: cmockery.c  config.h.in
libs/cmockery/src/example/: allocate_module.c  calculator.c
libs/cmockery/src/google/: cmockery.h
libs/libcsv/: CMakeLists.txt  Makefile.am  Makefile.in
libs/libcsv/inc/: csv.h
libs/libcsv/src/: libcsv.c
py-plinkio/: Makefile.am  Makefile.in  common.h  cplinkio.c  snparray.c
py-plinkio/plinkio/: __init__.py  plinkfile.py
py-plinkio/src/cplinkio/: common.h  snparray.h
py-plinkio/src/plinkio/: plinkfile.py
py-plinkio/src/plinkio/cplinkio/: .clang_complete  Makefile.in  cplinkio.c
py-plinkio/tests/: plinkio_test.py  read_write_test.py  write_test.py
py-plinkio/tests/data/: crlf.bed  crlf.bim  crlf.fam  crlf.ped  crlf_compound.map  crlf_compound.ped
py-plinkio/wrapper/: __init__.py  plinkfile.py  plinkio.py  test.py
search/: all_61.html  all_62.html  all_63.html  all_64.html  all_66.html  all_69.html  all_6d.html  all_6e.html  all_70.html  all_72.html  all_73.html  all_75.html  classes_62.html  classes_70.html  classes_73.html  classes_75.html  defines_5f.html  defines_62.html  defines_6f.html  defines_75.html  enums_61.html  enums_62.html  enums_66.html  enums_70.html  enums_73.html  enumvalues_62.html  enumvalues_66.html  enumvalues_70.html  files_62.html  files_66.html  files_70.html  files_73.html  files_75.html  functions_62.html  functions_66.html  functions_70.html  search.js  typedefs_63.html  typedefs_64.html  typedefs_66.html  (+15 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  bed.c  bed_header.c  bim.c  bim_parse.c  fam.c  fam_parse.c  file.c  map.c  map_parse.c  packed_snp.c  ped.c  ped_parse.c  plink_txt_parse.c  plink_txt_parse.h  plinkio.c  plinkio_private.h  utility.c
src/plinkio/: array.h  bed.h  bed_header.h  bim.h  bim_parse.h  endian.h.in  fam.h  fam_parse.h  file.h  plinkio.h  snp_lookup.h  snp_lookup.h.in  snp_lookup_big.h  snp_lookup_little.h  status.h  utarray.h
src/private/: bed.h  bim.h  fam.h  locus.h  map.h  map_parse.h  packed_snp.h  ped.h  ped_parse.h  plink_txt_parse.h  plinkio.h  sample.h  utility.h
tests/: CMakeLists.txt  Makefile.am  Makefile.in  bed_test.c  bim_test.c  fam_test.c  map_test.c  mock.c  mock.h  ped_test.c  plink_txt_test.c  plinkio_test.c  plinkio_test.py  snp_bit_test.c  transpose.c
tests/data/: small.ped  small_compound.map  small_compound.ped
