[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plinkio"
version="0.9.9"
description = "A library for parsing plink genotype files"
authors = [
    { name = "Mattias Franberg", email = "mattias.franberg@gmail.com" },
]
readme = "README.rst"
requires-python = ">=3.7"
license = { file = "COPYING" }
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Indicate who your project is intended for
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: BSD License",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["plinkio", "bioinformatics", "genetics"]
dependencies = []

[project.urls]
repository = "https://github.com/mfranberg/libplinkio"

[project.optional-dependencies]
test = [
    "tox >= 3.28.0",
]

[tool.setuptools.packages.find]
where = ["py-plinkio/src"]
include = [ "plinkio" ]
