INCLUDE (CheckIncludeFiles)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

include_directories( "." )
include_directories( ${LIBCSV_INCLUDE_DIR} )

file( GLOB_RECURSE SRC_LIST "*.c" )
file( GLOB_RECURSE HEADERS "plinkio/*.h" "*.h")
list( APPEND HEADERS ${AG_HEADERS} )

if( NOT DISABLE_SHARED_LIBRARY )
    add_library( libplinkio SHARED ${SRC_LIST} )
    if(CMAKE_GENERATOR MATCHES "Visual Studio")
        target_compile_options( libplinkio PRIVATE /Wall)
    else()
        target_compile_options( libplinkio PRIVATE -Wall -Wextra -Werror )
    endif()
    SET_TARGET_PROPERTIES( libplinkio PROPERTIES OUTPUT_NAME plinkio )
    install( TARGETS libplinkio DESTINATION lib )
endif( )

if( NOT DISABLE_STATIC_LIBRARY )
    add_library( libplinkio-static STATIC ${SRC_LIST} )
    if(CMAKE_GENERATOR MATCHES "Visual Studio")
        target_compile_options( libplinkio-static PRIVATE /Wall)
    else()
        target_compile_options( libplinkio-static PRIVATE -Wall -Wextra -Werror )
    endif()
    SET_TARGET_PROPERTIES( libplinkio-static PROPERTIES OUTPUT_NAME plinkio )
endif( )

if( NOT DISABLE_INSTALL_HEADERS )
    install( FILES ${HEADERS} DESTINATION include/plinkio )
endif( )
